fixed overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,13 +7,15 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: #fff;
   color: #555;
   font-family: 'Lato', 'Arial', 'sans-serif';
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 .clearfix {zoom: 1} /* clear float after an element, then put it in ul, because child elements of the class have the float prop, so parent has clearfix class so float will be cleared after ul*/
